force-app/main/default/objects/Activity/fields/Cc__c.field-meta.xml
<CustomField>
    <fullName>Cc__c</fullName>
    <label>Cc:</label>
    <type>Email</type>
</CustomField>