force-app/main/default/objects/Activity/fields/Cuerpo__c.field-meta.xml
<CustomField>
    <fullName>Cuerpo__c</fullName>
    <label>Cuerpo</label>
    <type>TextArea</type>
</CustomField>