force-app/main/default/objects/Activity/fields/De__c.field-meta.xml
<CustomField>
    <fullName>De__c</fullName>
    <label>De</label>
    <length>255</length>
    <type>Text</type>
</CustomField>