force-app/main/default/objects/Activity/fields/Motivo_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Contacto__c</fullName>
    <label>Motivo del Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asesoría Producto Individual</fullName>
            </value>
            <value>
                <fullName>Asesoría Producto Empresarial</fullName>
            </value>
            <value>
                <fullName>Reclamo</fullName>
            </value>
            <value>
                <fullName>Sugerencia</fullName>
            </value>
            <value>
                <fullName>Solicitud Gestión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>