force-app/main/default/objects/Activity/fields/Para1__c.field-meta.xml
<CustomField>
    <fullName>Para1__c</fullName>
    <label>Para</label>
    <type>Email</type>
</CustomField>