force-app/main/default/objects/Activity/fields/Proyeccion__c.field-meta.xml
<CustomField>
    <fullName>Proyeccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyección</label>
    <referenceTo>Proyeccion__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>