force-app/main/default/objects/Activity/fields/TipoProyeccion__c.field-meta.xml
<CustomField>
    <fullName>TipoProyeccion__c</fullName>
    <label>Tipo de Proyección</label>
    <length>20</length>
    <type>Text</type>
</CustomField>